feat: Complete Phase 1 - Foundation setup
Database & Infrastructure:
- Add PostgreSQL with pgvector via Docker Compose
- Create database schema with knowledge_base, interaction_logs tables
- Add database connection with async SQLAlchemy

RAG & Embeddings:
- Implement embedding service using OpenAI text-embedding-3-small
- Add vector similarity search for knowledge base
- Create RAG service for context retrieval

Agent Tools:
- Add base tool interface
- Implement search_knowledge_base tool
- Add Shopify tools with mock data support

API & Services:
- Set up FastAPI application structure
- Add health check endpoint
- Configure Pydantic settings

Sample Data:
- Add sample FAQ entries
- Add sample policies (return, refund, shipping)
- Add sample order data for testing

Dev Environment:
- Add pyproject.toml with dependencies
- Add Makefile for common commands
- Update .gitignore for Python project
- Add .env.example template

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,23 @@
-# Gmail API
+# Required
+OPENAI_API_KEY=sk-your-api-key-here
+
+# Database (local Docker default)
+DATABASE_URL=postgresql+asyncpg://postgres:postgres@localhost:5432/support_agent
+
+# Shopify (optional - uses mock if empty)
+SHOPIFY_STORE_URL=
+SHOPIFY_ACCESS_TOKEN=
+USE_MOCK_SHOPIFY=true
+
+# Gmail (optional - uses REST API testing if empty)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_REFRESH_TOKEN=
-GMAIL_PUBSUB_TOPIC=
-
-# Shopify
-SHOPIFY_STORE_URL=your-store.myshopify.com
-SHOPIFY_ACCESS_TOKEN=
-
-# Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
-
-# LLM Providers
-OPENAI_API_KEY=
-ANTHROPIC_API_KEY=
-GOOGLE_AI_API_KEY=
+USE_MOCK_EMAIL=true
 
 # Optional: Slack for escalations
 SLACK_WEBHOOK_URL=
+
+# Application
+DEBUG=true
+ENVIRONMENT=local
