--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,35 @@
-# Dependencies
-node_modules/
-.pnp/
-.pnp.js
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+.venv/
+ENV/
+env/
 
 # Environment variables
 .env
 .env.local
 .env.*.local
-.dev.vars
-
-# Build outputs
-dist/
-build/
-.wrangler/
 
 # IDE
 .idea/
@@ -28,13 +45,18 @@ Thumbs.db
 # Logs
 logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Testing
-coverage/
-.nyc_output/
+.coverage
+.pytest_cache/
+htmlcov/
+.tox/
+.nox/
+
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # Temporary files
 tmp/
@@ -48,9 +70,12 @@ token.json
 *.key
 service-account.json
 
-# Cloudflare
-.wrangler/
+# Database
+*.db
+*.sqlite3
 
-# Supabase
-supabase/.branches/
-supabase/.temp/
+# Docker
+.docker/
+
+# Alembic
+alembic/versions/*.pyc
